--- a/src/components/dead-vase/dead-vase.styles.css
+++ b/src/components/dead-vase/dead-vase.styles.css
@@ -23,6 +23,7 @@
   color: #484848;
   font-weight: normal;
   font-size: 1rem;
+  font-family: 'M PLUS 1', sans-serif;
   padding-bottom: 2rem;
   padding-top: 2rem;
   margin-left: 0;
@@ -39,6 +40,7 @@
   color: #484848;
   font-weight: normal;
   font-size: 1rem;
+  font-family: 'M PLUS 1', sans-serif;
   padding-bottom: 1rem;
   margin-top: -0.5rem;
 }
