--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -66,8 +66,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   object-fit: cover;
 }
 
@@ -244,8 +244,33 @@ li {
       list-style: none; 
       
       }
-
-   
+      #video-container {
+        width: 100%;
+        height: auto;
+        position: relative;
+      }
+      #video-container video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      .background-video {
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        object-fit: cover;
+      }
+      
+      .background-img {
+        position: absolute;
+        width: 100%;
+        height: 160vh;
+        opacity: 0.4;
+        object-fit: cover;
+      }
+      
 
     
 
