--- a/src/components/hyphen/hyphen.styles.css
+++ b/src/components/hyphen/hyphen.styles.css
@@ -6,15 +6,25 @@
   max-width: 800px;
   z-index: 1;
   margin-left: 4rem;
-}
-
-@media (max-width: 767px) {
-  .hyphen-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 100%;
-    z-index: 1;
-    margin: 0;
   }
-}
+  
+  @media (max-width: 767px) {
+  .hyphen-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 100%;
+  z-index: 1;
+  margin: 0;
+  }
+  
+  .hyphen-img {
+  max-width: 100%;
+  object-fit: contain;
+  }
+  }
+  
+  
+  
+  
+  
