--- a/src/components/invasive-modification/invasive-modification.styles.css
+++ b/src/components/invasive-modification/invasive-modification.styles.css
@@ -57,6 +57,7 @@ flex-direction: row;
   color: #646060;
   font-size: 1.25rem;
   font-weight: normal;
+  font-family: 'M PLUS 1', sans-serif;
   
 }
 
@@ -64,7 +65,7 @@ flex-direction: row;
   color: #646060;
   font-size: 1.25rem;
   font-weight: normal;
-  
+  font-family: 'M PLUS 1', sans-serif;
   text-align: right;
   overflow: hidden;
   line-height: 1.25rem;
@@ -89,6 +90,7 @@ flex-direction: row;
   font-size: 1rem;
   font-weight: normal;
   line-height: 0.5rem;
+  font-family: 'M PLUS 1', sans-serif;
 }
 
 .carousel-bullets{
