--- a/src/components/witness/witness.styles.css
+++ b/src/components/witness/witness.styles.css
@@ -17,6 +17,7 @@
   align-items: flex-start;
   color: #646060;
   text-align: start;
+  font-family: 'M PLUS 1', sans-serif;
 }
 
 .witness-text2 {
@@ -25,6 +26,7 @@
   align-items: flex-start;
   color: #646060;
   text-align: start;
+  font-family: 'M PLUS 1', sans-serif;
 }
 
 .player-wrapper {
